--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
 
     <h1>Data Structures in JavaScript</h1>
-
-<p>Use JavaScript Console to see the linked list in action. Stacks are LIFO (last in first out).</p>
+<p>Each example has heavy comments as notes.</p>
 <ul>
-  <li><a href="linked-list/linked-listt.html">Linked Lists</a></li>
+  <li><a href="linked-list/linked-list.html">Linked Lists</a></li>
   <li><a href="stacks/stacks.html">Stacks</a></li>
   <li><a href="queue/queue.html">Queues</a></li>
 </ul>
