--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
 <p></p>
 
-<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen. This repo is only my notes on what he teaches in his youtube videos.</a></p>
+<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen</a>. This repo is only my notes on what he teaches in <a href="https://www.youtube.com/channel/UC8butISFwT-Wl7EV0hUK0BQ/">his youtube videos.</a></p>
 
 </body>	
 </html>
