add maps and sets

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
 
     <h1>Data Structures in JavaScript</h1>
-<p>Each example has heavy comments as notes.</p>
+<p>Each example has heavy comments as notes. Run in the console to see everything in action.</p>
 <ul>
   <li><a href="linked-list/linked-list.html">Linked Lists</a></li>
   <li><a href="stacks/stacks.html">Stacks</a></li>
   <li><a href="queue/queue.html">Queues</a></li>
+  <li><a href="sets/sets.html">Sets</a></li>
+  <li><a href="maps/maps.html">Maps</a></li>
 </ul>
 <p></p>
 
-<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen</a>. This repo is only my notes on what he teaches in <a href="https://www.youtube.com/channel/UC8butISFwT-Wl7EV0hUK0BQ/">his youtube videos.</a></p>
+<p>Code based on Beau Carnes' <a href="https://medium.freecodecamp.org/10-common-data-structures-explained-with-videos-exercises-aaff6c06fb2b">Data Structures Tutorials</a>. This repo is only my notes on what he teaches in <a href="https://www.youtube.com/channel/UC8butISFwT-Wl7EV0hUK0BQ/">his YouTube videos</a>.</p>
 
 </body>	
 </html>
