--- a/linked-list/linked-list.html
+++ b/linked-list/linked-list.html
@@ -170,9 +170,9 @@ console.log("myLinkedList.size(): ", myLinkedList.size());
 ╚═══════════╩═════════╩════════════╝
 </pre>
 
-<p>Use JavaScript Console to see the linked list in action.</p>
+<p>Use the JavaScript Console to see the linked list in action.</p>
 
-<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/ybOvBq?editors=0012">Linked List Code Pen</a></p>
+<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/ybOvBq?editors=0012">Linked List Code Pen</a>.</p>
 
 </body>	
 </html>
