--- a/queue/queue.html
+++ b/queue/queue.html
@@ -113,11 +113,11 @@ pq.printCollection();
 ╚═══════════╩═════════╩════════════╝
 </pre>
 
-<p>Use JavaScript Console to see the a queue in action. Queues are FIFO (First in first out).</p>
+<p>Use the JavaScript Console to see the a queue in action. Queues are FIFO (First in first out).</p>
 
 <p>In JavaScript, you can use an array to do this.</p>
 
-<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen</a></p>
+<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/QpaQRG?editors=0012">Queue Code Pen</a></p>
 
 </body>	
 </html>
