--- a/stacks/stacks.html
+++ b/stacks/stacks.html
@@ -102,11 +102,11 @@ console.log("myStack.peek(): ", myStack.peek());
 ╚═══════════╩═════════╩════════════╝
 </pre>
 
-<p>Use JavaScript Console to see the stack in action. Stacks are LIFO (last in first out).</p>
+<p>Use the JavaScript Console to see the stack in action. Stacks are LIFO (last in first out).</p>
 
 <p>Note: <code>pop()</code> will <code>console.log</code> what is popped.</p>
 
-<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen</a></p>
+<p>Code based on Beau Carnes' <a href="https://codepen.io/beaucarnes/pen/yMBGbR?editors=0012">Stacks Code Pen</a>.</p>
 
 </body>	
 </html>
